--- a/css/styles.css
+++ b/css/styles.css
@@ -62,3 +62,10 @@ h2{
     margin: 0px;
     color: #0f0f0f;
 }
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding:10px;
+}
