--- a/css/styles.css
+++ b/css/styles.css
@@ -75,12 +75,22 @@ h2{
 }
 
 .carousel-item {
-  height: 300px;
+  height: 250px;
+  margin:0 auto;
+  
+  
 }
 
 .carousel-item img {
     position: absolute;
     top: 0;
     left: 0;
-    min-height: 300px;
+    min-height: 250px;
+}
+
+#carouselButton {
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
 }
